--- a/NYNavigationViewDemo/Base.lproj/Main.storyboard
+++ b/NYNavigationViewDemo/Base.lproj/Main.storyboard
@@ -1,14 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8Q2-8O-ioU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="Ee4-Jr-qA1">
+            <objects>
+                <navigationController id="8Q2-8O-ioU" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FQ3-Fo-flw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="uwK-s9-dsp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YRH-XB-omQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1514" y="194"/>
+        </scene>
+        <!--第一页-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -18,9 +35,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" title="第一页" id="0cg-3E-joa">
+                        <barButtonItem key="rightBarButtonItem" title="第二页" id="5D5-S2-YdE">
+                            <connections>
+                                <segue destination="lBT-ob-xHZ" kind="show" id="xvw-Yy-5bY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-567" y="194"/>
+        </scene>
+        <!--第二页-->
+        <scene sceneID="S6E-in-dyg">
+            <objects>
+                <viewController id="lBT-ob-xHZ" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1nn-xh-Zaf"/>
+                        <viewControllerLayoutGuide type="bottom" id="FD8-3G-NXL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mfC-IB-Sk3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="FhF-tL-Bug"/>
+                        <barButtonItem image="back-red.png" id="nJz-WH-ypy"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="第二页" id="ZYD-Vt-hLk">
+                        <barButtonItem key="leftBarButtonItem" image="back-red.png" id="daa-oy-Mi4">
+                            <connections>
+                                <action selector="pop:" destination="lBT-ob-xHZ" id="wxp-7A-h5K"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VN1-hc-ZS4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="340" y="194"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back-red.png" width="24" height="24"/>
+    </resources>
+    <color key="tintColor" red="0.98549884560000001" green="0.34680056570000001" blue="0.34786111120000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
