--- a/NYNavigationViewDemo/Base.lproj/Main.storyboard
+++ b/NYNavigationViewDemo/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
         <!--第一页-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="FirstViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
